--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 :root {
-  --primary: rgb(0, 171, 225);
+  --primary: rgba(0, 171, 225, 0.8);
   --bg: rgba(22, 31, 109, 0.9);
 }
 * {
@@ -195,9 +195,8 @@ section h2 {
 }
 /* kontak */
 .kontak {
-  min-height: 100vh;
+  min-height: 80vh;
   display: flex;
-  padding-bottom: 30px;
   align-items: center;
   background-color: var(--bg);
 }
@@ -250,6 +249,14 @@ section h2 {
   background: rgba(153, 153, 153, 0.2);
   border-radius: 4px;
   color: #777;
+}
+.kontak_field button {
+  padding: 5px 20px;
+  margin-top: 12px;
+  background-color: var(--primary);
+  border: none;
+  border-radius: 3px;
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.6);
 }
 footer {
   background-color: black;
